Fixed spacing around project categories to address #1

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -418,11 +418,18 @@ form {
 	text-align: center;
 }
 
+.projects-blurb {
+	text-align: left;
+}
+
 .project-categories {
 	text-align: center;
-	margin-top: 40px;
-	margin-bottom: 100px;
-	
+	margin-top: 20px;
+	margin-bottom: 30px;
+}
+
+.btn-lg {
+	margin: 5px;
 }
 
 .project-categories btn {
